--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:text="Requests Near You"
         android:textColor="#F18686"
         android:textSize="72px"
-        android:textFontWeight="700"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -268,7 +268,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginBottom="0dp"
         android:text="Button"
-
+        
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintStart_toStartOf="parent" />
 
