--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -173,7 +173,7 @@
 
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
-        android:id="@+id/card2top"
+        android:id="@+id/card3top"
         android:layout_marginTop="530dp"
         android:layout_marginLeft="40dp"
         android:layout_width="200dp"
@@ -185,7 +185,7 @@
         >
 
         <TextView
-            android:id="@+id/timeaway2"
+            android:id="@+id/timeaway3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="6 min away"
@@ -202,7 +202,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card2"
+        android:id="@+id/card3"
         android:layout_marginTop="570dp"
         android:layout_marginLeft="40dp"
         android:layout_width="285dp"
@@ -213,7 +213,7 @@
         >
 
         <TextView
-            android:id="@+id/item2"
+            android:id="@+id/item3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="PADS  |  2 min ago"
@@ -225,7 +225,7 @@
             android:textStyle="bold"
             />
         <TextView
-            android:id="@+id/info_text2"
+            android:id="@+id/info_text3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Any sanitary napkin you have would help, doesn’t matter to me!"
@@ -263,12 +263,12 @@
 
     <Button
         android:id="@+id/request_button"
-        android:layout_marginStart="52dp"
         android:layout_marginBottom="0dp"
+        android:layout_marginTop="30dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/reqbutton"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
