--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -6,6 +6,11 @@
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_home" />
 
+    <!--<item
+        android:id="@+id/navigation_dashboard"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_dashboard" />-->
+
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_baseline_book_24"
